force-app/main/default/objects/Country__c/fields/ISOCode__c.field-meta.xml
<CustomField>
    <fullName>ISOCode__c</fullName>
    <label>ISO Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>