force-app/main/default/objects/Country__c/fields/TotalPlayers__c.field-meta.xml
<CustomField>
    <fullName>TotalPlayers__c</fullName>
    <label>Total Players</label>
    <summaryForeignKey>Player__c.Country__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>